--- a/assets/style.css
+++ b/assets/style.css
@@ -8,6 +8,7 @@ body {
     width: 100%;
     height: 100vh;
     letter-spacing: -1px;
+    background-color: rgb(100, 53, 53);
 }
 
 nav {
@@ -51,14 +52,21 @@ h2 {
 
 }
 
+#history {
+    width: 305px;
+    height: 500px;
+    background-color: rgb(189, 172, 236);
+
+}
+
 #weatherDetail {
-    background-color: blue;
+    background-color: rgb(112, 166, 228);
     width: 1000px;
     height: 200px
 }
 
 #dayFive {
-    background-color: pink;
+    background-color: rgb(221, 138, 221);
     width: 1000px;
     height: 300px;
     margin-top: 10px;
