--- a/assets/style.css
+++ b/assets/style.css
@@ -68,6 +68,7 @@ h2 {
 #dayFive {
     background-color: rgb(221, 138, 221);
     width: 1000px;
-    height: 300px;
     margin-top: 10px;
+    display: flex;
+    justify-content: space-around;
 }
